manifests/calico/egress-def.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
spec:
  podSelector: {}
  # 如果加上下面的表示该pod允许所有去访问其他pod
  # egress:
  # - {}
  policyTypes:
  - Egress # 定义了但是没有写规则，说明没有符合条件的规则，也就是禁止所有规则生效， 但是没有写engress。说明默认egress没有制定规则。也就是默认都生效的。
